--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <DOCTYYPE html>
 <html lang="en">
 <head>
-<meta charset ="UTF-8">
+<metacharset="UTF-8">
 <meta name="viewport"content="width=device width,initial-scale=1.0">
  <title>Meu site Simples</title>
 <link rel="stylesheet" href="styles.css">
+</body>
 </head>
 <header>
 <h1>Bem-Vindo ao Meu Sites</h1>
