--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </body>
 </head>
 <header>
-<h1>Bem-Vindo ao Meu Sites</h1>
+<h1>SergipeTec</h1>
 </header>
 <nav>
 <ul>
 <li><a href="#">Página Inicial</a></li>
-<li><a href="#">Sobre</a></li>
+<li><a href="#">Quem é a gente?</a></li>
 <li><a href="#">Contato</a></li>
 </ul>
 </nav>
@@ -24,7 +24,7 @@
     </section>
 </main>
 <footer>
-    <p>&copy;2024 Meu Site Simples</p>
+    <p>São Cristovão - Sergipe</p>
     </footer>
 </body>
 </html>
